// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavPanel/> should render NavPanel component to show Search By panel 1`] = `
<nav
  className="navbar navbar-light navbar-expand-md"
>
  <div
    className="navbar-nav mr-auto"
  >
    <span
      className="navbar-brand"
    >
      SEARCH BY
    </span>
    <a
      className="nav-link active"
      href="#"
      key="title"
    >
      TITLE
    </a>
    <a
      className="nav-link"
      href="#"
      key="director"
    >
      DIRECTOR
    </a>
  </div>
  <button
    className="btn btn-outline-success"
    onClick={[MockFunction]}
    type="button"
  >
    SEARCH
  </button>
</nav>
`;

exports[`<NavPanel/> should render NavPanel component to show Sort By panel 1`] = `
<nav
  className="navbar navbar-light navbar-expand-md"
>
  <span
    className="navbar-brand"
  >
    7 movies found
  </span>
  <div
    className="navbar-nav ml-auto"
  >
    <span
      className="navbar-brand"
    >
      Sort by
    </span>
    <a
      className="nav-link active"
      href="#"
      key="releaseDate"
    >
      release date
    </a>
    <a
      className="nav-link"
      href="#"
      key="voteAvg"
    >
      rating
    </a>
  </div>
</nav>
`;
